cluster/core/monitoring/signoz/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: signoz-http
  namespace: monitoring
spec:
  hostnames:
    - signoz.btkostner.network
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: signoz-frontend
          port: 3301
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
